# MosChallenge2025

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pyrightconfig.json  ruff.toml
lightning_logs/version_4/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_7/: metrics.csv
src/audio/: __init__.py  utils.py
track1/core/config/: dataset.py  loss.py  model.py
track1/core/dataset/: __init__.py  create_features.py  create_features_test.py  dataset.py  featdataset.py  featdataset_aux.py  getdataset.py  mospl.py  mospl_aux.py
track1/core/model/: getmodel.py  mosnet.py  mosnet_aux.py  mospl.py  mospl_aux.py
track1/core/modules/: aux_feature.py  clap.py
track1/core/notebook/: promptisim.ipynb
track1/doc/: DATASET.md
track1/exp/infer/: getdataset.py  test_inference.py
track1/exp/mosnet/: __init__.py  mosnet001.py  mosnet002.py  mosnet003.py  mosnet004.py  mosnet005.py  mosnet006.py
track1/exp/utils/: to_answer.py
track3/: README.md
track3/core/codec/: README.md  to_flac16k.py
track3/core/config/: __init__.py  dataset.py  loss.py  ml.py  model.py  path.py
track3/core/dataset/: mosdataset.py  mospl.py
track3/core/models/: sslclpl.py  sslclpl_sf.py  sslpl.py  utmospl.py  utmospl_sf.py  utmospl_sfds.py
track3/dataset/bvcc/: formatter_main.py  formatter_ood.py
track3/dataset/librittsr/: formatter.py
track3/dataset/main/: __init__.py  formatter.py
track3/dataset/somos/: formatter.py
track3/dataset/utils/: user_gather.py
track3/doc/: ContrastiveLearning.md  DATASET.md
track3/exp/: README.md
track3/exp/cl_sslw2v2_bilstmattention/: train00100.py
track3/exp/cl_sslw2v2_bilstmattn/: train00100.py  train00101.py
track3/exp/inference/: README.md  gather_inference.py  i3000.py  i3000.sh  i4000.py  i4000.sh  i5000.py  i5000.sh
track3/exp/inference_test/: gather_inference.py  gather_inference_stat.py  i3000.py  i3000.sh  i4000.py  i4000.sh
track3/exp/oof/: __init__.py  fold_and_eval.py  lgbm_fold_and_eval.py  lgbm_fold_and_eval_v2.py
track3/exp/sslw2v2_bilstmattn/: train00100.py  train00101.py  train00102.py
(+109 files in other folders)
