[project]
name = "ml-env"
version = "0.1.0"
description = "ml-env"

authors = [{ name = "k-washi", email = "bandad.kw@gmail.com" }]

readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "librosa>=0.11.0",
    "lightning>=2.5.1",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "schedulefree>=1.4.1",
    "scipy>=1.15.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchlibrosa>=0.1.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]


[tool.uv]
dev-dependencies = [
    "descript-audiotools",
    "ipykernel>=6.29.5",
    "nemo-toolkit[tts]>=2.0.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "wandb>=0.19.9",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "platform_system != 'Darwin'" }]
torchaudio = [{ index = "pytorch-cu126", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cu126", marker = "platform_system != 'Darwin'" }]
descript-audiotools = { git = "https://github.com/descriptinc/audiotools" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
